# inpainting-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/lama_demo/: __init__.py  config.py
src/lama_demo/api/: main.py
src/lama_demo/api/endpoints/: inpainting.py
src/lama_demo/app/: main.py
src/lama_demo/models/: lama.py
src/lama_demo/static/css/: styles.css
src/lama_demo/static/js/: inpainting.js
src/lama_demo/templates/: inpainting.html
