[project]
name = "lama-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bghuy", email = "huygia.b@gmail.com" }
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.10.0.84",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.6",
    "pillow>=10.4.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lama_demo"]
